Issue #280 - Fix bad spacing in script status alert boxes
Remove horrible <br> tag usage in bliss-script-notification and fix bug
in markup that was causing margins/padding to get gobbled by the
notification class.

Update listeners in bliss-script-notification to include a script start
event handler for resetting the status box when a script is (re)started.

--- a/bliss/gui/static/css/bliss/gui/Script.css
+++ b/bliss/gui/static/css/bliss/gui/Script.css
@@ -8,3 +8,8 @@ bliss-script .error {color: red}
 bliss-script .load_dialog--hidden {
     display: none;
 }
+
+bliss-scriptnotification {
+    margin: 20px 0 20px 0;
+    display: inline-block;
+}
